processed/gerrit/txt/54881.txt
Change:     54881
Subject:    LU-17767 build: struct lsmcontext has slot or id member
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/54881
Change-Id:  I5080e60614b42ed63103f93cae1f481851742d0b
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Sebastien Buisson
Created:    2024-04-23 15:14:34.000000000
Updated:    2024-05-21 18:43:25.000000000
Patch Set:  3
Insertions: +33
Deletions:  -1
Comments:   2 (0 unresolved)

--- Labels ---
  Code-Review: James Simmons: +1; Shaun Tancheff: +1; Aurelien Degremont: +1; Sebastien Buisson: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, James Simmons, Jian Yu, Sebastien Buisson, Aurelien Degremont, Shaun Tancheff

--- Commit Message ---
LU-17767 build: struct lsmcontext has slot or id member

With Ubuntu 24.04 kernel 6.8.0-31-generic, the struct lsmcontext uses
a field named 'id' to identify the LSM module, instead of 'slot' in
previous kernel versions.

Fixes: 0e66489401 ("LU-16619 build: Ubuntu jammy 5.19 client support")
Test-Parameters: trivial
Signed-off-by: Sebastien Buisson <sbuisson@ddn.com>
Change-Id: I5080e60614b42ed63103f93cae1f481851742d0b
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/54881
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Aurelien Degremont <adegremont@nvidia.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Sebastien Buisson, 2024-04-23 15:14:34.000000000) ---
Uploaded patch set 1.

--- Message (jenkins, 2024-04-23 15:39:24.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/104324/ : SUCCESS

--- Message (Aurelien Degremont, 2024-04-23 15:43:54.000000000) ---
Patch Set 1: Code-Review+1

--- Message (James Simmons, 2024-04-23 15:48:30.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Shaun Tancheff, 2024-04-23 16:09:21.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Jian Yu, 2024-04-23 16:37:52.000000000) ---
Patch Set 1: Verified-1

lustre/llite/xattr_security.c:105:27: error: ‘struct lsmcontext’ has no member named ‘slot’
  105 |         *secctx_slot = ctx.slot;
      |                           ^

--- Message (Aurelien Degremont, 2024-04-23 17:20:30.000000000) ---
Patch Set 1: -Code-Review

> Patch Set 1: Verified-1
> 
> lustre/llite/xattr_security.c:105:27: error: ‘struct lsmcontext’ has no member named ‘slot’
>   105 |         *secctx_slot = ctx.slot;
>       |                           ^

This needs the same #ifdef than what Sebastien put in the other file.
I grep in the source, it seems this is the only missing part.

--- Message (Jian Yu, 2024-04-23 17:23:45.000000000) ---
Patch Set 1:

Thank you, Aurelien. Let me update the patch.

--- Message (Jian Yu, 2024-04-23 17:49:01.000000000) ---
Uploaded patch set 2.

--- Message (jenkins, 2024-04-23 17:49:04.000000000) ---
Patch Set 1:

No Builds Executed

--- Message (jenkins, 2024-04-23 18:13:00.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/104328/ : SUCCESS

--- Message (Autotest, 2024-04-23 18:13:56.000000000) ---
Patch Set 1:

Onyx Autotest 2 is abandoning the following sessions because: later build 104328 found
- Enforced review-ldiskfs-dne on el9.3-x86_64/ldiskfs servers and clients

--- Message (Aurelien Degremont, 2024-04-23 18:33:01.000000000) ---
Patch Set 2: Code-Review+1

Jian, I assume your patch version is now building fine on Ubuntu 24.04 ?

--- Message (Jian Yu, 2024-04-23 18:42:01.000000000) ---
Patch Set 2:

> Patch Set 2: Code-Review+1
> 
> Jian, I assume your patch version is now building fine on Ubuntu 24.04 ?

Yes, Aurelien, building passed with kernel 6.8.0-31-generic. I need to do some testing.

--- Message (Sebastien Buisson, 2024-04-23 20:13:24.000000000) ---
Patch Set 2: Code-Review+1

Thanks for the refresh Jian!

--- Message (James Simmons, 2024-04-24 18:49:48.000000000) ---
Patch Set 2: Code-Review+1

--- Message (wc-checkpatch, 2024-04-25 21:31:08.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Shaun Tancheff, 2024-05-17 00:57:58.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Oleg Drokin, 2024-05-21 18:43:22.000000000) ---
Patch Set 2: Code-Review+2

--- Message (Oleg Drokin, 2024-05-21 18:43:25.000000000) ---
Change has been successfully cherry-picked as d74d86840056e83cd0138a261ab7b6040a43bfb4 by Oleg Drokin
